p2/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-k3s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # app1 domain definition
    - host: app1.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app1-nginx-server
              port:
                number: 80
    # app2 domain definition
    - host: app2.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app2-nginx-server
              port: 
                number: 80
    # app3 domain definition
    - host: app3.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app3-nginx-server
              port:
                number: 80
